@@ -15,7 +15,8 @@ use vars qw($COL_NULLABLE $COL_KEY);
 $test_dsn = '';
 $test_user = '';
 $test_password = '';
-
+use SQL::Statement;
+my $SVERSION = $SQL::Statement::VERSION;
 
 #
 #   Include lib.pl
@@ -80,9 +81,17 @@ while (Testing()) {
     #
     #   and here's the right place for inserting new tests:
     #
-    my @rows = ([1, ''],
-		[2, ' '],
-		[3, ' a b c ']);
+    my @rows;
+    if ($SVERSION > 1) {
+        @rows = ([1, 'NULL'],
+	 	 [2, ' '],
+		 [3, ' a b c ']);
+    }
+    else {
+        @rows = ([1, ''],
+	 	 [2, ' '],
+		 [3, ' a b c ']);
+    }
     my $ref;
     foreach $ref (@rows) {
 	my ($id, $name) = @$ref;
@@ -144,3 +153,6 @@ while (Testing()) {
     Test($state or $dbh->disconnect)
 	or ErrMsgF("Cannot disconnect: %s.\n", $dbh->errmsg);
 }
+
+
+
